# universal-deploy

./: README.md
universal-deploy/: BUNDLE_SPEC.md  README.md  SETUP_GUIDE.md  deploy.json.example  pyproject.toml
universal-deploy/src/universal_deploy/: __init__.py  bundles.py  cli.py  config.py  doctor.py  github.py  log.py
