[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-deploy"
version = "1.0.0"
description = "A configurable, project-agnostic update deployer with GitHub push, audit logging, and bundle management."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["deploy", "automation", "github", "bundles", "ci"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]

[project.scripts]
deploy = "universal_deploy.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/universal-deploy"
Repository = "https://github.com/yourusername/universal-deploy"

[tool.setuptools.packages.find]
where = ["src"]
